# uu-tiktok

./: .gitignore  Cargo.toml  README.md
.claude/skills/tiktok-developer-docs/: SKILL.md
.claude/skills/whisper-cpp/: SKILL.md
docs/: FOLLOWUPS.md  SRC-BAKE-CHECKLIST.md  SRC-BAKE-NOTES.md
docs/decisions/: AD0001-split-plan-a-into-per-task-files-for-cheaper-subagent-context.md  AD0002-dead-code-suppression-strategy-and-deferred-binary-library-restructuring.md  AD0003-test-discipline-for-plan-prescribed-code-and-deviations.md  AD0004-transcript-output-sharding-by-last-two-digits-of-video-id.md  AD0005-use-cargo-test-helpers-feature-for-library-items-needed-by-integration-tests.md  AD0006-store-mutators-return-result-of-usize-for-row-change-count.md  AD0007-stats-structs-use-input-side-counters-with-verb-named-fields.md  AD0008-pipeline-writes-transcript-artifacts-before-mark_succeeded-for-crash-recovery-durability.md  AD0009-use-whisper-rs-for-whisper.cpp-embedding-with-version-pin-and-fallback-policy.md  AD0010-json-artifact-raw_signals-schema-pass-through-with-schema-version.md  AD0011-spin-down-operational-practice-for-dev-workspace.md  AD0012-cooperative-cancellation-via-per-request-arc-atomicbool-and-abort-callback.md  AD0013-gpu-verification-at-startup-assert-backend-and-log-device-name.md  AD0014-audio-input-invariant-float32-pcm-16khz-mono-via-hound.md  AD0015-explicit-non-use-of-whisper-full-parallel.md  AD0016-architecture-for-parallelism-engine-api-stable-across-single-and-multi-state.md  AD0017-operational-done-contract-for-batch-validation.md  index.yaml
docs/superpowers/plans/: 2026-04-16-uu-tiktok-pipeline-plan-a-walking-skeleton.md  PLAN-B-EPIC-2-KICKOFF-PROMPT.md  PLAN-B-KICKOFF-PROMPT.md
docs/superpowers/specs/: 2026-04-16-uu-tiktok-pipeline-design.md  (+1 more)
scripts/: fetch-tiny-model.sh
src/: audio.rs  canonical.rs  cli.rs  config.rs  errors.rs  ingest.rs  lib.rs  main.rs  pipeline.rs  process.rs  transcribe.rs
src/fetcher/: mod.rs  ytdlp.rs
src/output/: artifacts.rs  mod.rs
src/state/: mod.rs  schema.rs
tests/: canonical.rs  cli.rs  e2e_real_tools.rs  ingest.rs  pipeline_fakes.rs  state_claims.rs  state_ingest.rs  state_open.rs  whisper_engine_init.rs
tools/tiktok-docs-crawler/: package-lock.json  package.json  tiktok_docs_crawler.ts
(+462 files in other folders)
