[package]
name = "uu-tiktok"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
regex = "1"
once_cell = "1"
# Tracks whisper.cpp v1.8.3 (commit 2eeeba56e9edd762b4b38467bab96c2517163158) via whisper-rs-sys 0.15.0.
whisper-rs = { version = "=0.16.0", default-features = false }
hound = "3.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
default = []
cuda = ["whisper-rs/cuda"]
test-helpers = []

[[test]]
name = "state_ingest"
required-features = ["test-helpers"]

[[test]]
name = "state_claims"
required-features = ["test-helpers"]

[[test]]
name = "ingest"
required-features = ["test-helpers"]

[[test]]
name = "pipeline_fakes"
required-features = ["test-helpers"]

[[test]]
name = "e2e_real_tools"
